--- a/public/css/main.css
+++ b/public/css/main.css
@@ -98,7 +98,18 @@
     display: none;
     font-size: 23px;
     margin-top: 50px;
-   font-weight: 500;
+    font-weight: 700;
+    padding: 30px;
+    text-align: center;
+}
+
+#contact-message {
+    display: none;
+    font-size: 23px;
+    margin-top: 50px;
+    font-weight: 700;
+    padding: 30px;
+    text-align: center;
 }
 
 nav {
