--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,6 +28,9 @@
     font-weight: 900;
  }
 
+/*.testimonial-wrapper {*/
+
+/*}*/
 
 .qoute-section {
     padding-bottom: 180px;
@@ -504,6 +507,7 @@ footer {
     top:-16px;
     position: absolute;
     display: none;
+    background-color: #f8f9fb;
 
 }
 
@@ -745,7 +749,7 @@ footer {
 
     .benefits-list-item {
         font-weight: 500;
-        font-size: 18px;
+        font-size: 20px;
     }
 
     .green-circle-guide {
@@ -755,6 +759,8 @@ footer {
         display: inline-block;
         width: 23px;
         font-size: 11px;
+        padding-top: 0px;
+
     }
 
 
