--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,6 +10,14 @@
     justify-content: center;
 }
 
+.author-post-avatar {
+
+    width: 54px;
+    height: 54px;
+    border-radius: 27px;
+    border: 3px solid #0cc291;
+}
+
 #popout {
     height: 400px;
     width: 800px;
